Fix bgstretch

--- a/src/style.css
+++ b/src/style.css
@@ -39,8 +39,8 @@ body {
   overflow: hidden;
   /* margin: 0px; */
   /* padding: 0px; */
-  height: 944px;
-  /* width: 1098px; */
+  height: 100vh;
+  width: 100vw;
   z-index: -999999;
   position: fixed;
   right: 0;
@@ -48,15 +48,15 @@ body {
 
 .backstretch img {
   position: absolute;
-  /* margin: 0px; */
-  /* padding: 0px; */
+  margin: 0px;
+  padding: 0px;
   border: none;
-  /* width: 1416px; */
-  height: 944px;
-  max-width: none;
+  width: 100vw;
+  height: 100vh;
+  /* max-width: none; */
   z-index: -999999;
   /* left: -159px; */
-  /* top: 0px; */
+  top: 0px;
 }
 
 /* BEGIN TOP BAR */
@@ -294,3 +294,4 @@ li.current-page a {
   background-color: #52c0b0;
 }
 /* END SLIDE BACKGROUND */
+
